--- a/src/app/components/paneles/kpi/kpi.component.html
+++ b/src/app/components/paneles/kpi/kpi.component.html
@@ -1,9 +1,11 @@
 <div class="kpi-contenedor">
-<div class="kpi-contenedor-filtro">
-  <mat-card class="mat-card-custom mat-elevation-z4">
-    <div class="filtro-header">
-      <span class="filtro-texto">
-        <strong>Filtro de datos:</strong>
+
+  <!-- ================= CONTEXTO / FILTRO ================= -->
+  <div class="kpi-contenedor-filtro">
+    <mat-card class="mat-card-custom mat-elevation-z4">
+      <div class="filtro-header">
+        <span class="filtro-texto">
+          <strong>Filtro de datos:</strong>
           {{ range.start | date : "dd/MM/yyyy HH:mm:ss" }} -
           {{ range.end | date : "dd/MM/yyyy HH:mm:ss" }} | Activo:
           {{ selectedAsset.code }}
@@ -12,151 +14,175 @@
         <div class="filtro-botones">
           <mat-spinner *ngIf="cargando" diameter="30"></mat-spinner>
 
-        <button mat-icon-button matTooltip="Recargar" (click)="recargar()">
-          <mat-icon>refresh</mat-icon>
-        </button>
+          <button mat-icon-button matTooltip="Recargar" (click)="recargar()">
+            <mat-icon>refresh</mat-icon>
+          </button>
 
-        <button mat-icon-button matTooltip="Aplicar filtros" (click)="openDialog()">
-          <mat-icon>filter_list</mat-icon>
-        </button>
-      </div>
-    </div>
-  </mat-card>
-</div>
-
-<div class="kpi-grid">
-
-  <!-- ESTADOS DE MÁQUINA -->
-  <mat-card class="card">
-    <h3>Distribución de Estados</h3>
-    <apx-chart
-      [series]="chartEstados.series!"
-      [chart]="chartEstados.chart!"
-      [labels]="chartEstados.labels!"
-      [colors]="chartEstados.colors!"
-      [dataLabels]="chartEstados.dataLabels!"
-      [legend]="chartEstados.legend!">
-    </apx-chart>
-  </mat-card>
-
-  <!-- RADIAL UTILIZACION
-  <mat-card class="card radial-chart">
-    <h3>Tasa de Utilización (%)</h3>
-    <apx-chart
-      [series]="chartUtilizacion.series!"
-      [chart]="chartUtilizacion.chart!"
-      [labels]="chartUtilizacion.labels!"
-      [plotOptions]="chartUtilizacion.plotOptions!"
-      [colors]="chartUtilizacion.colors!">
-    </apx-chart>
-  </mat-card>
-  -->
-
-<!-- CONTADORES -->
-<mat-card class="card kpi-contadores kpi-split">
-
-  <!-- ================= KPI SUPERIORES ================= -->
-  <mat-card class="kpi-subcard superior">
-
-    <h4 class="kpi-subtitulo">
-      Días desde último mantenimiento
-    </h4>
-
-    <div class="kpi-row">
-
-      <div class="totalizador-item">
-        <div class="titulo-totalizador">Plegadora 1</div>
-        <div class="circulo-valor">
-          {{ horasUltimoMantenimiento }}
-        </div>
-        <div class="kpi-extra">TM = 120</div>
-      </div>
-
-      <div class="totalizador-item">
-        <div class="titulo-totalizador">Plegadora 2</div>
-        <div class="circulo-valor">
-          {{ horasUltimoMantenimiento }}
-        </div>
-        <div class="kpi-extra">TM = 120</div>
-      </div>
-
-    </div>
-  </mat-card>
-
-  <!-- ================= KPI INFERIORES ================= -->
-  <mat-card class="kpi-subcard inferior">
-
-    <div class="kpi-grid-inferior">
-
-      <div class="totalizador-item">
-        <div class="titulo-totalizador">Consumo Específico<br> de Energía</div>
-        <div class="circulo-valor">
-          {{ consumoEspecifico }}<br>
-          <span class="unidad">kWh/pieza</span>
+          <button mat-icon-button matTooltip="Aplicar filtros" (click)="openDialog()">
+            <mat-icon>filter_list</mat-icon>
+          </button>
         </div>
       </div>
+    </mat-card>
+  </div>
 
-      <div class="totalizador-item">
-        <div class="titulo-totalizador">Consumo de<br> Alambre</div>
-        <div class="circulo-valor">
-          {{ consumoAlambre }}<br>
-          <span class="unidad">Kg/pieza</span>
-        </div>
-      </div>
+  <div class="kpi-grid">
 
+    <!-- IDEA DE LECTURA
+    ¿Qué estoy mirando? - Contexto / Filtro
+    ¿En qué estado estuvo la máquina? - Estados + Timeline
+    ¿Qué tan bien se usó? - Utilización + Energía
+    ¿Qué tan eficiente fue? - KPIs duros (ciclo, consumo, fallas)
+    ¿Qué produjo? - Producción
+    ¿Hubo problemas de seguridad? - Actos inseguros (alerta)
+    -->
+
+    <!-- ================= ESTADOS (QUÉ + CUÁNDO) ================= -->
+
+    <!-- DISTRIBUCIÓN DE ESTADOS -->
+    <mat-card class="card">
+      <h3>Distribución de Tareas</h3>
+      <apx-chart
+        [series]="chartEstados.series!"
+        [chart]="chartEstados.chart!"
+        [labels]="chartEstados.labels!"
+        [colors]="chartEstados.colors!"
+        [dataLabels]="chartEstados.dataLabels!"
+        [legend]="chartEstados.legend!">
+      </apx-chart>
+    </mat-card>
+
+    <!-- TIEMPO VS ESTADO -->
+    <mat-card class="card">
+      <h3>Tiempo vs Estado</h3>
+      <div class="chart-wrapper">
+        <apx-chart
+          [series]="chartTiempoEstado.series!"
+          [chart]="chartTiempoEstado.chart!"
+          [plotOptions]="chartTiempoEstado.plotOptions!"
+          [xaxis]="chartTiempoEstado.xaxis!"
+          [dataLabels]="chartTiempoEstado.dataLabels!"
+          [legend]="chartTiempoEstado.legend!"
+          [colors]="chartTiempoEstado.colors!">
+        </apx-chart>
       </div>
     </mat-card>
 
-  </mat-card>
+    <!-- ================= USO Y ENERGÍA ================= -->
 
-
-  <!-- ENERGÍA TOTAL -->
-  <mat-card class="card">
-    <h3>Energía total consumida (kWh)</h3>
-    <div class="chart-wrapper">
+    <!-- TASA DE UTILIZACIÓN -->
+    <mat-card class="card radial-chart">
+      <h3>Tasa de Utilización (%)</h3>
       <apx-chart
-        [series]="chartEnergia.series!"
-        [chart]="chartEnergia.chart!"
-        [xaxis]="chartEnergia.xaxis!"
-        [colors]="chartEnergia.colors!"
-        [legend]="chartEnergia.legend!">
+        [series]="chartUtilizacion.series!"
+        [chart]="chartUtilizacion.chart!"
+        [labels]="chartUtilizacion.labels!"
+        [plotOptions]="chartUtilizacion.plotOptions!"
+        [colors]="chartUtilizacion.colors!">
       </apx-chart>
-    </div>
-  </mat-card>
+    </mat-card>
 
-  <!-- ENERGÍA NO PRODUCTIVA
-  <mat-card class="card radial-chart">
-    <h3>Energía No Productiva (%)</h3>
-    <apx-chart
-      [series]="chartNoProductiva.series!"
-      [chart]="chartNoProductiva.chart!"
-      [labels]="chartNoProductiva.labels!"
-      [colors]="chartNoProductiva.colors!"
-      [plotOptions]="chartNoProductiva.plotOptions!">
-    </apx-chart>
-  </mat-card>
-  -->
-
-  <!-- PIEZAS POR DÍA
-  <mat-card class="card">
-    <h3>Piezas producidas por día</h3>
-
-    <div class="chart-wrapper">
+    <!-- ENERGÍA NO PRODUCTIVA -->
+    <mat-card class="card radial-chart">
+      <h3>Energía No Productiva (%)</h3>
       <apx-chart
-        [series]="chartPiezas.series!"
-        [chart]="chartPiezas.chart!"
-        [xaxis]="chartPiezas.xaxis!"
-        [colors]="chartPiezas.colors!">
+        [series]="chartNoProductiva.series!"
+        [chart]="chartNoProductiva.chart!"
+        [labels]="chartNoProductiva.labels!"
+        [colors]="chartNoProductiva.colors!"
+        [plotOptions]="chartNoProductiva.plotOptions!">
       </apx-chart>
-    </div>
+    </mat-card>
 
-    <div class="piezas-totales">
-      <span class="label">Piezas totales:</span>
-      <span class="valor">{{ piezasTotales }}</span>
-    </div>
-  </mat-card>
-  -->
+    <!-- ENERGÍA TOTAL -->
+    <mat-card class="card">
+      <h3>Energía total consumida (kWh)</h3>
+      <div class="chart-wrapper">
+        <apx-chart
+          [series]="chartEnergia.series!"
+          [chart]="chartEnergia.chart!"
+          [xaxis]="chartEnergia.xaxis!"
+          [colors]="chartEnergia.colors!"
+          [legend]="chartEnergia.legend!">
+        </apx-chart>
+      </div>
+    </mat-card>
 
-</div>
+    <!-- ================= KPIs OPERATIVOS ================= -->
+
+    <mat-card class="card kpi-contadores kpi-split">
+
+      <mat-card class="kpi-subcard superior">
+        <h4 class="kpi-subtitulo">Mantenimiento y Confiabilidad</h4>
+
+        <div class="kpi-row">
+          <div class="totalizador-item">
+            <div class="titulo-totalizador">Tiempo Medio<br>de Falla</div>
+            <div class="circulo-valor">
+              {{ horasUltimoMantenimiento }} <span class="unidad">h</span>
+            </div>
+          </div>
+
+          <div class="totalizador-item">
+            <div class="titulo-totalizador">Desviación<br>del Tiempo</div>
+            <div class="circulo-valor">
+              {{ horasUltimoMantenimiento }} <span class="unidad">s</span>
+            </div>
+          </div>
+        </div>
+      </mat-card>
+
+      <mat-card class="kpi-subcard inferior">
+        <div class="kpi-grid-inferior">
+          <div class="totalizador-item">
+            <div class="titulo-totalizador">Consumo Espec.<br>de Energía</div>
+            <div class="circulo-valor">
+              {{ consumoEspecifico }}<br>
+              <span class="unidad">kWh/pieza</span>
+            </div>
+          </div>
+
+          <div class="totalizador-item">
+            <div class="titulo-totalizador">Tiempo de Ciclo<br>Promedio</div>
+            <div class="circulo-valor">
+              {{ consumoAlambre }} <span class="unidad">s</span>
+            </div>
+          </div>
+        </div>
+      </mat-card>
+
+    </mat-card>
+
+    <!-- ================= PRODUCCIÓN ================= -->
+
+    <mat-card class="card">
+      <h3>Piezas producidas por hora</h3>
+      <div class="chart-wrapper">
+        <apx-chart
+          [series]="chartPiezasHora.series!"
+          [chart]="chartPiezasHora.chart!"
+          [xaxis]="chartPiezasHora.xaxis!"
+          [stroke]="chartPiezasHora.stroke!"
+          [colors]="chartPiezasHora.colors!">
+        </apx-chart>
+      </div>
+    </mat-card>
+
+    <!-- ================= SEGURIDAD ================= -->
+
+    <mat-card class="card">
+      <h3>Actos Inseguros Detectados</h3>
+      <div class="chart-wrapper">
+        <apx-chart
+          [series]="chartActosInseguros.series!"
+          [chart]="chartActosInseguros.chart!"
+          [xaxis]="chartActosInseguros.xaxis!"
+          [colors]="chartActosInseguros.colors!"
+          [dataLabels]="chartActosInseguros.dataLabels!">
+        </apx-chart>
+      </div>
+    </mat-card>
+
+  </div>
 </div>
 
