--- a/src/app/components/paneles/tareas/tareas.component.html
+++ b/src/app/components/paneles/tareas/tareas.component.html
@@ -125,3 +125,12 @@
 
 </div>
 
+<!-- Boton ver pdf
+  <button mat-icon-button (click)="onPlanosClick(element)"
+    disabled]="element.low_date"
+    *ngIf=" (authService.hasPermission('roles','read') &&authService.hasPermission('modules','read'))"
+    matTooltip="Ver pdf"
+  >
+    <mat-icon class="visibility-icon">visibility</mat-icon>
+  </button>
+-->
