--- a/src/app/components/paneles/kpi/kpi.component.css
+++ b/src/app/components/paneles/kpi/kpi.component.css
@@ -303,3 +303,47 @@ apx-chart {
   height: 100%;
   max-height: 260px;
 }
+
+/* tarjeta doble */
+.card.doble {
+  grid-column: span 2;
+}
+
+/* TESTS */
+@media (max-width: 48em) {
+
+  /* 48em ≈ 768px */
+  .card.doble {
+    grid-column: span 1;
+  }
+
+  .kpi-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .card {
+    min-height: auto;
+  }
+}
+
+@media (max-width: 48em) {
+  .filtro-texto {
+    text-align: center;
+    font-size: 0.85rem;
+    word-wrap: break-word;
+  }
+
+  .filtro-botones {
+    justify-content: center;
+    width: 100%;
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 90em) {
+
+  /* monitores grandes */
+  .kpi-grid {
+    grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
+  }
+}
