--- a/src/app/components/paneles/produccion/produccion.component.html
+++ b/src/app/components/paneles/produccion/produccion.component.html
@@ -11,7 +11,7 @@
     <!-- Contenedor con SVG directo -->
     <div class="map-container">
 
-      <svg #svgElement id="svg1" width="939.33" height="483.33" version="1.1" viewBox="0 0 939.33 483.33" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg #svgElement id="svg1" width="939.33" height="483.33" version="1.1" viewBox="0 0 939.33 483.33" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="g1">
           <image id="image1" width="939.33" height="483.33" preserveAspectRatio="none" xlink:href="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAkACQAAD/2wBDAAIBAQIBAQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcG
         BwcICQsJCAgKCAcHCg0KCgsMDAwMBwkODw0MDgsMDAz/2wBDAQICAgMDAwYDAwYMCAcIDAwMDAwM
