--- a/src/app/components/paneles/produccion/produccion.component.css
+++ b/src/app/components/paneles/produccion/produccion.component.css
@@ -6,7 +6,8 @@
 
 .container {
   width: 100%;
-  height: 500px;
+  height: 100%;
+  min-height: 500px;
   display: flex;
   flex-direction: column;
   background-color: transparent;
@@ -48,6 +49,7 @@ svg {
 .side-panel {
   width: 300px;
   min-width: 300px;
+  height: 100%;
   background-color: white;
   padding-left: 15px;
   overflow-y: auto;
@@ -193,6 +195,28 @@ svg {
   z-index: 9999;
 }
 
+/* Escalado de label */
+/* Pantallas medianas */
+@media (min-width: 1200px) {
+  .map-legend {
+    font-size: 15px;
+  }
+}
+
+/* Pantallas grandes */
+@media (min-width: 1600px) {
+  .map-legend {
+    font-size: 20px;
+  }
+}
+
+/* Pantallas muy grandes */
+@media (min-width: 1920px) {
+  .map-legend {
+    font-size: 30px;
+  }
+}
+
 .legend-item {
   display: flex;
   align-items: center;
@@ -205,6 +229,31 @@ svg {
   height: 10px;
   border-radius: 50%;
   display: inline-block;
+}
+
+/* Escalado de dot */
+/* Pantallas medianas */
+@media (min-width: 1200px) {
+  .dot {
+    width: 15px;
+    height: 15px;
+  }
+}
+
+/* Pantallas grandes */
+@media (min-width: 1600px) {
+  .dot {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+/* Pantallas muy grandes */
+@media (min-width: 1920px) {
+  .dot {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .critico {
