--- a/src/app/components/paneles/evidencia/evidencia-filtro/evidencia-filtro.component.html
+++ b/src/app/components/paneles/evidencia/evidencia-filtro/evidencia-filtro.component.html
@@ -17,7 +17,7 @@
   <mat-form-field appearance="outline">
     <mat-label>Activos</mat-label>
 
-    <mat-select [(ngModel)]="selectedValue" multiple>
+    <mat-select [(ngModel)]="selectedValue">
       <mat-option *ngFor="let option of options" [value]="option.value">
         {{ option.viewValue }}
       </mat-option>
