cambio boton agregar mantenimiento + correccion tareas

--- a/src/app/components/paneles/mantenimiento/mantenimiento-agregar-editar/mantenimiento-agregar-editar.component.html
+++ b/src/app/components/paneles/mantenimiento/mantenimiento-agregar-editar/mantenimiento-agregar-editar.component.html
@@ -20,8 +20,8 @@
 
   <!-- Detalle -->
   <mat-form-field appearance="outline">
-    <mat-label>Detalle</mat-label>
-    <input matInput formControlName="detail" placeholder="Ingrese el detalle"/>
+    <mat-label>Observación</mat-label>
+    <input matInput formControlName="detail" placeholder="Ingrese observación"/>
   </mat-form-field>
 
   <!-- Inicio -->
