--- a/src/app/components/paneles/tareas/tareas.component.html
+++ b/src/app/components/paneles/tareas/tareas.component.html
@@ -21,7 +21,7 @@
             mat-icon-button
             (click)="cargarCsv()"
 
-            matTooltip="Cargar archivo csv"
+            matTooltip="Cargar archivo .CSV"
           >
             <mat-icon class="agregar-icono">add_circle</mat-icon>
           </button>
