--- a/src/app/components/paneles/tareas/tareas-filtro/tareas-filtro.component.html
+++ b/src/app/components/paneles/tareas/tareas-filtro/tareas-filtro.component.html
@@ -1,18 +1,41 @@
 <h2 mat-dialog-title>Filtros</h2>
-<br>
+<br />
 <mat-dialog-content>
   <mat-form-field appearance="outline">
     <mat-label>Rango de fechas</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-      <input matStartDate formControlName="start" placeholder="Fecha de inicio" />
+      <input
+        matStartDate
+        formControlName="start"
+        placeholder="Fecha de inicio"
+      />
       <input matEndDate formControlName="end" placeholder="Fecha de fin" />
     </mat-date-range-input>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-date-range-picker #picker></mat-date-range-picker>
   </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Activos</mat-label>
+    <mat-select [formControl]="activos" multiple>
+      <mat-select-trigger>
+        {{activos.value?.[0] || ''}}
+        @if ((activos.value?.length || 0) > 1) {
+        <span class="seleccion">
+          (+{{ (activos.value?.length || 0) - 1 }} más)
+        </span>
+        }
+      </mat-select-trigger>
+      @for (activo of activosList; track activo) {
+      <mat-option [value]="activo">{{ activo }}</mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
   <button mat-button (click)="close()">Cancelar</button>
-  <button mat-flat-button color="primary" (click)="applyFilters()">Aplicar</button>
+  <button mat-flat-button color="primary" (click)="applyFilters()">
+    Aplicar
+  </button>
 </mat-dialog-actions>
