--- a/src/app/components/paneles/tareas/tareas.component.html
+++ b/src/app/components/paneles/tareas/tareas.component.html
@@ -47,69 +47,91 @@
     <mat-card class="mat-card-custom mat-elevation-z4">
       <div class="tareas-contenedor-element">
         <div class="table-wrapper scroll-x">
-          <table mat-table [dataSource]="dataSourceTasks" class="table table-tareas">
+          <table mat-table [dataSource]="dataSourceTasks" matSort class="table table-tareas">
 
-            <!-- COLUMNA: Producto -->
-            <ng-container matColumnDef="product">
-              <th mat-header-cell *matHeaderCellDef>Producto</th>
+            <!-- COLUMNA: Activo -->
+            <ng-container matColumnDef="codigo_activo">
+              <th mat-header-cell *matHeaderCellDef>Activo</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.asset_code }}
+                {{ getAssetCode(element.id_asset) }}
               </td>
             </ng-container>
 
-            <!-- COLUMNA: Hora Inicio Estimada -->
-            <ng-container matColumnDef="estimated_start_time">
-              <th mat-header-cell *matHeaderCellDef>Hs Inicio Estimada</th>
+            <!-- COLUMNA: Codigo Articulo -->
+            <ng-container matColumnDef="codigo_articulo">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Articulo</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.part_code }}
+                {{ element.article_code }}
               </td>
             </ng-container>
 
-            <!-- COLUMNA: Hora Inicio Real -->
-            <ng-container matColumnDef="actual_start_time">
-              <th mat-header-cell *matHeaderCellDef>Hs Inicio Real</th>
+            <!-- COLUMNA: Fin -->
+            <ng-container matColumnDef="ciclo_fecha_fin">
+              <th mat-header-cell *matHeaderCellDef>Fecha Fin</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.quantity }}
+                {{ element.cycle_end | date:'dd/MM/yyyy HH:mm:ss' }}
               </td>
             </ng-container>
 
-            <!-- COLUMNA: Hora Fin Estimada -->
-            <ng-container matColumnDef="estimated_end_time">
-              <th mat-header-cell *matHeaderCellDef>Hs Fin Estimada</th>
+            <!-- COLUMNA: Inicio Estimado -->
+            <ng-container matColumnDef="ciclo_fecha_inicio_est">
+              <th mat-header-cell *matHeaderCellDef>Fecha Inicio Estimado</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.detail }}
+                {{ element.cycle_start_est | date:'dd/MM/yyyy HH:mm:ss' }}
               </td>
             </ng-container>
 
-            <!-- COLUMNA: Hora fin Real -->
-            <ng-container matColumnDef="actual_end_time">
-              <th mat-header-cell *matHeaderCellDef>Hs Fin Real</th>
+            <!-- COLUMNA: Inicio Medido -->
+            <ng-container matColumnDef="ciclo_fecha_inicio_medida">
+              <th mat-header-cell *matHeaderCellDef>Fecha Inicio Medido</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.start | date:'dd/MM/yyyy HH:mm:ss' }}
+                <!-- Completar campo mas adelante -->
               </td>
             </ng-container>
 
-            <!-- COLUMNA: Duracion Estimada -->
-            <ng-container matColumnDef="estimated_duration">
-              <th mat-header-cell *matHeaderCellDef>Duración Estimada</th>
+            <!-- COLUMNA: Cantidad Prog -->
+            <ng-container matColumnDef="pza_cant_prog">
+              <th mat-header-cell *matHeaderCellDef>Cant Programadas</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.end ? (element.end | date:'dd/MM/yyyy HH:mm:ss') : '-' }}
+                {{ element.planned_qty }}
               </td>
             </ng-container>
 
-            <!-- COLUMNA: Duracion Real -->
-            <ng-container matColumnDef="actual_duration">
-              <th mat-header-cell *matHeaderCellDef>Duración Real</th>
+            <!-- COLUMNA: Cantidad Buenas -->
+            <ng-container matColumnDef="pza_cant_buenas">
+              <th mat-header-cell *matHeaderCellDef>Cant Buena</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.user_name }}
+                {{ element.good_qty }}
               </td>
             </ng-container>
 
-            <!-- COLUMNA: Cliente -->
-            <ng-container matColumnDef="client">
-              <th mat-header-cell *matHeaderCellDef>Cliente</th>
+            <!-- COLUMNA: Cantidad Malas -->
+            <ng-container matColumnDef="pza_cant_malas">
+              <th mat-header-cell *matHeaderCellDef>Cant Mala</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.user_name }}
+                {{ element.bad_qty }}
+              </td>
+            </ng-container>
+
+            <!-- COLUMNA: Cantidad Usuario -->
+            <ng-container matColumnDef="pza_cant_usuario">
+              <th mat-header-cell *matHeaderCellDef>Cant Ejecutadas</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.user_qty }}
+              </td>
+            </ng-container>
+
+            <!-- COLUMNA: Detalle -->
+            <ng-container matColumnDef="detalle">
+              <th mat-header-cell *matHeaderCellDef>Detalle</th>
+              <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button (click)="onDetalleClick(element)"
+                    [disabled]="element.low_date"
+                    *ngIf=" (authService.hasPermission('roles','read') &&authService.hasPermission('modules','read'))"
+                    matTooltip="Ver detalle"
+                    >
+                    <mat-icon class="description-icon">description</mat-icon>
+                  </button>
               </td>
             </ng-container>
 
@@ -125,7 +147,8 @@
           </table>
         </div>
         <mat-paginator
-          #paginatorData
+          #paginatorTasks
+          [pageSize]="10"
           [pageSizeOptions]="[10, 20]"
           showFirstLastButtons
           class="table-paginator"
@@ -135,13 +158,3 @@
   </div>
 
 </div>
-
-<!-- Boton ver pdf
-  <button mat-icon-button (click)="onPlanosClick(element)"
-    disabled]="element.low_date"
-    *ngIf=" (authService.hasPermission('roles','read') &&authService.hasPermission('modules','read'))"
-    matTooltip="Ver pdf"
-  >
-    <mat-icon class="visibility-icon">visibility</mat-icon>
-  </button>
--->
