--- a/src/app/components/paneles/produccion/produccion.component.css
+++ b/src/app/components/paneles/produccion/produccion.component.css
@@ -71,9 +71,7 @@ svg {
 
 /* NOTIFICACIÓN */
 .notification {
-  position: fixed;
-  top: 50%;
-  left: 50%;
+  position: absolute;
   transform: translate(-50%, -50%);
 
   /* ESTILO DISCRETO */
