--- a/src/app/components/paneles/evidencia/evidencia.component.html
+++ b/src/app/components/paneles/evidencia/evidencia.component.html
@@ -31,69 +31,73 @@
 
   <!-- COMPONENTE PRINCIPAL -->
   <!-- SE MUESTRA PARA EVIDENCIA POWER -->
-  <div *ngFor="let e of evidenciasPower" class="fila-maquina">
+  <div *ngFor="let e of evidenciasPower">
 
-    <!-- IZQUIERDA -->
-    <div class="columna-izquierda">
-      <mat-card class="mat-card-custom mat-elevation-z4 grafico-maquina">
-        <div class="titulo-maquina">
-          {{ e.code }}
-        </div>
+    <div *ngIf="e?.power?.length" class="fila-maquina">
 
-        <div class="kpi-potencia-grafico-element">
-          <app-grafico-potencia
-            [evidencia]="e"
-            [unidad]="'W'"
-            [titulo]="'Potencia por fases'">
-          </app-grafico-potencia>
-        </div>
-      </mat-card>
-    </div>
+      <!-- IZQUIERDA -->
+      <div class="columna-izquierda">
+        <mat-card class="mat-card-custom mat-elevation-z4 grafico-maquina">
+          <div class="titulo-maquina">
+            {{ e.code }}
+          </div>
 
-    <!-- DERECHA -->
-    <div class="columna-derecha">
-      <mat-card class="mat-card-custom mat-elevation-z4 kpi-potencia-card">
+          <div class="kpi-potencia-grafico-element">
+            <app-grafico-potencia
+              [evidencia]="e"
+              [unidad]="'W'"
+              [titulo]="'Potencia por fases'">
+            </app-grafico-potencia>
+          </div>
+        </mat-card>
+      </div>
 
-        <div class="kpi-totalizador-superior">
-          <mat-card class="mat-card-custom totalizador-card">
-            <div class="titulo-totalizador">
-              Potencia total
-            </div>
-            <div class="circulo-valor">
-              {{ e.total_consumption | number:'1.2-2' }} <br>
-              kWh
-            </div>
-          </mat-card>
+      <!-- DERECHA -->
+      <div class="columna-derecha">
+        <mat-card class="mat-card-custom mat-elevation-z4 kpi-potencia-card">
 
-          <div class="division-vertical"></div>
+          <div class="kpi-totalizador-superior">
+            <mat-card class="mat-card-custom totalizador-card">
+              <div class="titulo-totalizador">
+                Potencia total
+              </div>
+              <div class="circulo-valor">
+                {{ e.total_consumption | number:'1.2-2' }} <br>
+                kWh
+              </div>
+            </mat-card>
 
-          <mat-card class="mat-card-custom totalizador-card">
-            <div class="titulo-totalizador">
-              Consumo reactivo total
-            </div>
-            <div class="circulo-valor">
-              {{ e.total_reactive_consumption | number:'1.2-2' }} <br>
-              kVArh
-            </div>
-          </mat-card>
-        </div>
+            <div class="division-vertical"></div>
 
-        <div class="division-totalizadores-horizontal"></div>
+            <mat-card class="mat-card-custom totalizador-card">
+              <div class="titulo-totalizador">
+                Consumo reactivo total
+              </div>
+              <div class="circulo-valor">
+                {{ e.total_reactive_consumption | number:'1.2-2' }} <br>
+                kVArh
+              </div>
+            </mat-card>
+          </div>
 
-        <div class="kpi-totalizador-inferior">
-          <mat-card class="mat-card-custom totalizador-card-full">
-            <div class="kpi-potencia-grafico-element">
+          <div class="division-totalizadores-horizontal"></div>
 
-              <app-grafico-potencia-por-dia
-                [evidencia]="e"
-                [titulo]="'kWh por día'">
-              </app-grafico-potencia-por-dia>
+          <div class="kpi-totalizador-inferior">
+            <mat-card class="mat-card-custom totalizador-card-full">
+              <div class="kpi-potencia-grafico-element">
 
-            </div>
-          </mat-card>
-        </div>
+                <app-grafico-potencia-por-dia
+                  [evidencia]="e"
+                  [titulo]="'kWh por día'">
+                </app-grafico-potencia-por-dia>
 
-      </mat-card>
+              </div>
+            </mat-card>
+          </div>
+
+        </mat-card>
+      </div>
+
     </div>
 
   </div>
