--- a/src/app/components/paneles/tareas/tareas-cargar-csv/tareas-cargar-csv.component.html
+++ b/src/app/components/paneles/tareas/tareas-cargar-csv/tareas-cargar-csv.component.html
@@ -21,7 +21,14 @@
     <input
       #fileInput
       type="file"
-      accept=".csv,.xlsx,text/csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+      accept="
+        .csv,
+        .xls,
+        .xlsx,
+        text/csv,
+        application/vnd.ms-excel,
+        application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+      "
       (change)="onFileSelected($event)"
       hidden
     />
