comienzo panel kpi

--- a/src/app/components/paneles/kpi/kpi-grafico-barra-apilado/kpi-grafico-barra-apilado.component.html
+++ b/src/app/components/paneles/kpi/kpi-grafico-barra-apilado/kpi-grafico-barra-apilado.component.html
@@ -1,1 +1,11 @@
-<p>kpi-grafico-barra-apilado works!</p>
+<ng-container *ngIf="chartOptions">
+  <apx-chart
+    [series]="chartOptions.series"
+    [chart]="chartOptions.chart"
+    [plotOptions]="chartOptions.plotOptions"
+    [xaxis]="chartOptions.xaxis"
+    [legend]="chartOptions.legend"
+    [fill]="chartOptions.fill"
+    [colors]="chartOptions.colors">
+  </apx-chart>
+</ng-container>
