--- a/src/app/components/paneles/kpi/kpi-grafico-radial-bar/kpi-grafico-radial-bar.component.html
+++ b/src/app/components/paneles/kpi/kpi-grafico-radial-bar/kpi-grafico-radial-bar.component.html
@@ -1,1 +1,9 @@
-<p>kpi-grafico-radial-bar works!</p>
+<ng-container *ngIf="chartOptions">
+  <apx-chart
+    [series]="chartOptions.series"
+    [chart]="chartOptions.chart"
+    [labels]="chartOptions.labels"
+    [colors]="chartOptions.colors"
+    [plotOptions]="chartOptions.plotOptions">
+  </apx-chart>
+</ng-container>
