--- a/src/app/components/paneles/kpi/kpi-grafico-torta/kpi-grafico-torta.component.css
+++ b/src/app/components/paneles/kpi/kpi-grafico-torta/kpi-grafico-torta.component.css
@@ -1,12 +1,12 @@
-.kpi-grafico-torta {
+:host {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex: 1;
+  width: 100%;
+  height: 100%;
 }
 
-.titulo {
-  margin-bottom: 8px;
-  font-size: 14px;
-  font-weight: 600;
-  text-align: center;
+apx-chart {
+  flex: 1;
+  width: 100%;
+  height: 100%;
 }
