--- a/src/app/components/paneles/sesiones/sesiones.component.html
+++ b/src/app/components/paneles/sesiones/sesiones.component.html
@@ -38,7 +38,7 @@
       <table mat-table [dataSource]="sesionesDevice" class="sesion-table">
 
         <ng-container matColumnDef="code_assets">
-          <th mat-header-cell *matHeaderCellDef>Código</th>
+          <th mat-header-cell *matHeaderCellDef>Activo</th>
           <td mat-cell *matCellDef="let row">{{ row.code_assets }}</td>
         </ng-container>
 
