--- a/src/app/components/paneles/kpi/kpi.component.css
+++ b/src/app/components/paneles/kpi/kpi.component.css
@@ -20,6 +20,11 @@
   grid-column: span 2;
 }
 
+/* Tarjetas cuadruples */
+.card.cuadruple {
+  grid-column: span 4;
+}
+
 /* ================= TEXTOS ================= */
 .card h3 {
   font-size: 15px !important;
