apis kpis + apis tareas + comienzo modificaciones evidencia

--- a/src/app/components/paneles/evidencia/evidencia.component.css
+++ b/src/app/components/paneles/evidencia/evidencia.component.css
@@ -57,6 +57,19 @@
   display: flex;
 }
 
+/* Graficos inferiores */
+.columna-izquierda-2 {
+  flex: 1;
+  display: flex;
+  width: 50%;
+}
+
+.columna-derecha-2 {
+  flex: 1;
+  display: flex;
+  width: 50%;
+}
+
 /* PRUEBA */
 .columna-general {
   flex: 1;
