--- a/src/app/components/paneles/tareas/tareas-detalle/tareas-detalle.component.html
+++ b/src/app/components/paneles/tareas/tareas-detalle/tareas-detalle.component.html
@@ -52,6 +52,16 @@
     <b>{{ data.tool_change_count ?? '—' }}</b>
   </div>
 
+  <div class="fila">
+    <span>Cantidad Buenas</span>
+    <b>{{ data.good_qty ?? '—' }}</b>
+  </div>
+
+  <div class="fila">
+    <span>Cantidad Malas</span>
+    <b>{{ data.bad_qty ?? '—' }}</b>
+  </div>
+
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
