--- a/src/app/components/paneles/evidencia/evidencia.component.html
+++ b/src/app/components/paneles/evidencia/evidencia.component.html
@@ -102,6 +102,49 @@
 
   </div>
 
+  <!-- SE MUESTRA PARA EVIDENCIA POWER -->
+  <div *ngFor="let e of evidenciasPower">
+
+    <div *ngIf="e?.power?.length" class="fila-maquina">
+
+      <!-- IZQUIERDA -->
+      <div class="columna-izquierda-2">
+        <mat-card class="mat-card-custom mat-elevation-z4 grafico-maquina">
+          <div class="titulo-maquina">
+            {{ e.code }}
+          </div>
+
+          <div class="kpi-potencia-grafico-element">
+            <app-grafico-potencia
+              [evidencia]="e"
+              [unidad]="'W'"
+              [titulo]="'Potencia por fases'">
+            </app-grafico-potencia>
+          </div>
+        </mat-card>
+      </div>
+
+      <!-- DERECHA -->
+      <div class="columna-derecha-2">
+        <mat-card class="mat-card-custom mat-elevation-z4 grafico-maquina">
+          <div class="titulo-maquina">
+            {{ e.code }}
+          </div>
+
+          <div class="kpi-potencia-grafico-element">
+            <app-grafico-potencia
+              [evidencia]="e"
+              [unidad]="'W'"
+              [titulo]="'Potencia por fases'">
+            </app-grafico-potencia>
+          </div>
+        </mat-card>
+      </div>
+
+    </div>
+
+  </div>
+
   <!-- SE MUESTRA PARA EVIDENCIA TAREAS IA -->
   <div *ngFor="let e of evidenciasZonasIA" class="fila-maquina">
 
