--- a/src/app/components/paneles/tareas/tareas-grafico-gantt/tareas-grafico-gantt.component.html
+++ b/src/app/components/paneles/tareas/tareas-grafico-gantt/tareas-grafico-gantt.component.html
@@ -7,6 +7,7 @@
     [dataLabels]="chartOptions.dataLabels"
     [legend]="chartOptions.legend"
     [tooltip]="chartOptions.tooltip"
+    [annotations]="chartOptions.annotations!"
     [colors]="chartOptions.colors!">
   </apx-chart>
  </ng-container>
