--- a/src/app/components/paneles/tareas/tareas.component.css
+++ b/src/app/components/paneles/tareas/tareas.component.css
@@ -188,3 +188,53 @@ mat-spinner.mostrar {
 .table {
   min-width: max-content;
 }
+
+/* Estilos para columna estadia */
+.bobina-p {
+  display: flex;
+  gap: 14px;
+  /* un poco más de aire */
+  align-items: flex-end;
+}
+
+.bobina-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 60px;
+}
+
+.numero {
+  font-size: 12px;
+  margin-bottom: 3px;
+  font-weight: 600;
+}
+
+.bobina-px {
+  height: 6px;
+  width: 40px;
+  border-radius: 3px;
+  margin-bottom: 4px;
+}
+
+.zona-nombre {
+  font-size: 10px;
+  text-align: center;
+  line-height: 1.1;
+  max-width: 70px;
+  word-wrap: break-word;
+  color: #555;
+}
+
+/* Colores */
+.color-rojo {
+  background-color: var(--color-error);
+}
+
+.color-naranja {
+  background-color: var(--color-complementary);
+}
+
+.color-verde {
+  background-color: var(--color-success);
+}
